app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer utilities {
  .app {
    @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6
  }

  .section-title {
    @apply text-4xl md:text-5xl
  }

  .link {
    @apply ease-in duration-200 hover:-translate-y-[3px] hover:opacity-70
  }

  .cvBtn {
    @apply bg-[#6b3e99] px-4 py-3 rounded duration-300 ease-in text-[#fafafa] hover:bg-[#4a2771] hover:-translate-y-[3px]
  }

  .resizeImg {
    @apply w-[60px] h-[60px] md:h-[80px] md:w-[80px]
  }

  .gradientText {
    @apply text-transparent bg-gradient-to-r from-[#4a2771] to-amber-600 bg-clip-text dark:from-[#6b3e99] dark:to-amber-400 text-transparent bg-gradient-to-r from-[#4a2771] to-amber-600 bg-clip-text dark:from-[#6b3e99] dark:to-amber-400
  }

  .observerTransition {
    @apply transition duration-300 ease-in
  }
}

.main {
  width: 100vw;
  min-height: 100vh;
  position: fixed;
  display: flex;
  justify-content: center;
  padding: 100px 24px 140px 24px;
  pointer-events: none;
}

.main:before {
  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
  position: absolute;
  content: "";
  z-index: 2;
  width: 100%;
  height: 100%;
  top: 0;
}

.main:after {
  content: "";
  background-image: url("/images/grid.svg");
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  opacity: 1;
  filter: invert(1);
}

.gradient {
  height: fit-content;
  z-index: 3;
  width: 100%;
  max-width: 640px;
  background-image: radial-gradient(at 27% 37%,
      hsla(215, 98%, 61%, 1) 0px,
      transparent 0%),
    radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
    radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  filter: blur(100px) saturate(150%);
  top: 80px;
  opacity: 0.15;
}

@media screen and (max-width: 640px) {
  .main {
    padding: 0;
  }
}

